added weather controller and endpoint
